manifests/dev/tdarr/Namespace-tdarr.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: tdarr
