manifests/dev/tdarr/Deployment-tdarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: tdarr
    app.kubernetes.io/name: tdarr
    app.kubernetes.io/version: latest
  name: tdarr
  namespace: tdarr
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/instance: tdarr
      app.kubernetes.io/name: tdarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: tdarr
        app.kubernetes.io/name: tdarr
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Etc/UTC
            - name: serverIP
              value: 0.0.0.0
            - name: serverPort
              value: "8266"
            - name: webUIPort
              value: "8265"
            - name: internalNode
              value: "true"
            - name: inContainer
              value: "true"
            - name: auth
              value: "false"
            - name: healthcheckcpuWorkers
              value: "0"
            - name: healthcheckgpuWorkers
              value: "1"
            - name: transcodecpuWorkers
              value: "0"
            - name: transcodegpuWorkers
              value: "0"
            - name: LIBVA_DRIVER_NAME
              value: iris
            - name: XDG_RUNTIME_DIR
              value: ""
            - name: LIBVA_DRIVERS_PATH
              value: /usr/lib/x86_64-linux-gnu/dri
            - name: LIBVA_MESSAGING
              value: "1"
          image: ghcr.io/haveagitgat/tdarr:2.86.01
          imagePullPolicy: IfNotPresent
          name: tdarr
          ports:
            - containerPort: 8265
              name: http
              protocol: TCP
            - containerPort: 8266
              name: server
              protocol: TCP
          resources: {}
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
            privileged: true
          volumeMounts:
            - mountPath: /app/server
              name: config
            - mountPath: /temp
              name: temp
            - mountPath: /media/Movies
              name: media-movies
            - mountPath: /media/TV
              name: media-tv
            - mountPath: /dev/dri
              name: dri
      nodeSelector:
        kubernetes.io/hostname: nixmini
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 0
        runAsUser: 0
        supplementalGroups:
          - 303
      serviceAccountName: default
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tdarr-tdarr-config
        - name: temp
          persistentVolumeClaim:
            claimName: tdarr-tdarr-temp
        - name: media-movies
          persistentVolumeClaim:
            claimName: tdarr-tdarr-media-movies
        - name: media-tv
          persistentVolumeClaim:
            claimName: tdarr-tdarr-media-tv
        - hostPath:
            path: /dev/dri
            type: Directory
          name: dri
