manifests/dev/tdarr/Service-tdarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  namespace: tdarr
spec:
  ports:
    - name: http
      port: 8265
      protocol: TCP
      targetPort: http
    - name: server
      port: 8266
      protocol: TCP
      targetPort: server
  selector:
    app.kubernetes.io/instance: tdarr
    app.kubernetes.io/name: tdarr
  type: ClusterIP
