manifests/dev/tdarr/Ingress-tdarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdarr
  namespace: tdarr
spec:
  ingressClassName: traefik
  rules:
    - host: tdarr.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: tdarr
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - tdarr.home.kronkltd.net
